pld-comp/tests/ifcc-test-output/testfiles-3_9_multipledeclaratio/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:5: error: redeclaration of ‘a’ with no linkage
 int a;
     ^
input.c:3:5: note: previous declaration of ‘a’ was here
 int a,b;
     ^

return code: 1
